--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "16.8.6",
     "react-native": "0.60.4",
-    "react-native-link-preview": "^1.4.2"
+    "react-native-link-preview": "^1.4.2",
+    "react-native-push-notification": "^3.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
